--- a/src/main/webapp/pages/popups/successDialog.xhtml
+++ b/src/main/webapp/pages/popups/successDialog.xhtml
@@ -8,8 +8,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="../template/ui.xhtml">
 	<ui:define name="body">
-		<p:dialog widgetVar="successPanel#{id}" id="successPanel#{id}" modal="true"
-			draggable="false" closable="false" header="Done"
+		<p:dialog widgetVar="successPanel#{id}" id="successPanel#{id}" modal="true" draggable="false" closable="false" header="Done"
 			closeOnEscape="true" resizable="false">
 			<h:form>
 				<div class="successDialogDiv">
