--- a/src/main/webapp/pages/popups/successDialog.xhtml
+++ b/src/main/webapp/pages/popups/successDialog.xhtml
@@ -9,7 +9,7 @@
 	template="../template/ui.xhtml">
 	<ui:define name="body">
 		<p:dialog widgetVar="successPanel#{id}" id="successPanel#{id}" modal="true" draggable="false" closable="false" header="Done"
-			closeOnEscape="true" resizable="false">
+			closeOnEscape="true" resizable="false" dynamic="true">
 			<h:form>
 				<div class="successDialogDiv">
 					<p:panelGrid columns="2" styleClass="successGrid">
