--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -4,6 +4,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:pe="http://primefaces.org/ui/extensions"
@@ -16,55 +17,312 @@
 						<tr>
 							<td valign="top" width="20%">
 								    <p:panel id="buildingPanelId" widgetVar="buildingPanel">
-								    	<div class="analysisNewBuildingClass">
-									    	<p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/account.png" style="padding-right:5px"/>
+								    	<div class="analysisNewBuildingClass" align="center">
+									    	<p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/plus.png" style="padding-right:5px"/>
 											<p:commandLink value="Create Building" oncomplete="PF('newBuildingPopup').show()"></p:commandLink>    
 										</div>
-										<ui:repeat value="#{analysisBean.buildingsToShow}" var="building" varStatus="index">
-											 <p:panel styleClass="buildingPanelClass" id="toggleable#{index}" header="#{building.name}" collapsed="true" toggleable="true" toggleSpeed="500">
+										<ui:repeat value="#{analysisBean.buildingsToShow}" var="building" varStatus="varStatus" id="buildingSelection">
+											 <p:panel styleClass="buildingPanelClass" id="panel#{varStatus.index}" widgetVar="testingIds" header="#{building.name}" collapsed="true" toggleable="true" toggleSpeed="500">
 											    <f:facet name="actions">
 											     	<p:commandLink styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default" ajax="true" update="analysisForm" action="#{analysisBean.deleteBuilding(building)}">
 											     		<h:outputText styleClass="ui-icon ui-icon-circle-close" />
 											     	</p:commandLink>
 												</f:facet>
-											    <p:treeTable styleClass="divisionTree" id="docs" value="#{building.rootDivision}" var="division" selectionMode="single" >
+											    <p:treeTable rendered="#{not empty building.rootDivision}" styleClass="divisionTree" id="treeDivs" value="#{building.rootDivision}" var="division" selectionMode="single" >
 											        <p:column>
 											            <h:outputText value="#{division.name}" />
 											        </p:column>
-											        <p:ajax event="select" listener="#{analysisBean.selectDivision}"></p:ajax>
-													<p:ajax event="unselect" listener="#{analysisBean.unselectDivision}"></p:ajax>
+											        <p:ajax event="select" listener="#{analysisBean.selectDivision}" ajax="true" update="analysisForm:buildingSelection:#{varStatus.index}:toUpdate analysisForm:buildingSelection:#{varStatus.index}:deleteDivisionLink"></p:ajax>
+													<p:ajax event="unselect" listener="#{analysisBean.unselectDivision}" ajax="true" update="analysisForm:buildingSelection:#{varStatus.index}:toUpdate analysisForm:buildingSelection:#{varStatus.index}:deleteDivisionLink"></p:ajax>
 											    </p:treeTable>
 											    <p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/plus.png" style="padding-right:5px"/>
 											    <p:commandLink styleClass="buildingLinks" value="Add Division"
 											     		    oncomplete="PF('newDivisionPopup').show()"
-															action="#{analysisBean.setNewDivisionBuilding(building)}"
+															action="#{analysisBean.setSelectedBuilding(building)}"
 															ajax="true" update=":newDivisionFormId"></p:commandLink>
-											    <p:spacer width="15"></p:spacer>
+											    <p:spacer width="10"></p:spacer>
 											    <p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/negative.png" style="padding-right:5px"/>
-											    <p:commandLink id="deleteDivisionLink" disabled="#{empty analysisBean.parentDivisionSelected}" styleClass="buildingLinks" value="Delete Division" ajax="true" update="analysisForm"
+											    <p:commandLink id="deleteDivisionLink" 
+											    			   disabled="#{empty analysisBean.parentDivisionSelected}" 
+											    			   styleClass="buildingLinks" 
+											    			   value="Delete Division" 
+											    			   ajax="false" 
+											    			   type="submit"
 															   action="#{analysisBean.deleteDivision(building.buildingid)}"></p:commandLink>
-
+												<p:outputPanel id="toUpdate">
+													<br/>
+													<p:panel styleClass="analyzersStatus" rendered="#{not empty analysisBean.parentDivisionSelected}">
+														<p:outputPanel rendered="#{not empty analysisBean.analyzersFromDivision}">
+															<div align="center" style="padding-bottom: 10px">
+																<p:outputLabel value="Analyzers List" styleClass="analyzerListCss"/>
+															</div>
+															<p:dataTable var="analyzer" value="#{analysisBean.analyzersFromDivision}" selectionMode="single" selection="#{analysisBean.selectedAnalyzer}" rowKey="#{analyzer.analyzerId}">
+																<p:ajax event="rowSelect" listener="#{analysisBean.initAnalyzerGraph}" update="analysisForm:buildingSelection:#{varStatus.index}:toUpdate analysisForm:chartPanel" />
+																<p:column headerText="Analyzer">
+																	<p:outputLabel value="#{analyzer.codeName}"/>
+																</p:column>
+																<p:column headerText="Meters" style="text-align: center !important">
+																	 <p:commandLink
+														    			   disabled="#{empty analysisBean.selectedAnalyzer or (analyzer.analyzerId ne analysisBean.selectedAnalyzer.analyzerId)}"
+														    			   oncomplete="PF('metersPanel').show()"
+														    			   update="metersForm"
+														    			   value="Show" 
+														    			   ajax="true"></p:commandLink>
+																</p:column>
+															</p:dataTable>
+														</p:outputPanel>
+														<p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/plus.png" style="padding-right:5px"/>
+													    <p:commandLink value="Add Analyzer"
+													        styleClass="buildingLinks"
+											     		    oncomplete="PF('newAnalyzerPopup').show()"
+															ajax="true" update="analysisForm"></p:commandLink>
+													    <p:spacer width="10"></p:spacer>
+													    <p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/negative.png" style="padding-right:5px"/>
+													    <p:commandLink id="deleteAnalyzerId"
+										    			   styleClass="buildingLinks" 
+										    			   value="Delete Analyzer"
+										    			   disabled="#{empty analysisBean.selectedAnalyzer}"
+										    			   ajax="false" 
+										    			   type="submit"
+														   action="#{analysisBean.removeAnalyzerSelected(building.buildingid)}"></p:commandLink>
+													</p:panel>
+												</p:outputPanel>
 										     </p:panel>
 										</ui:repeat>
 									</p:panel>
 							</td>
-							<td valign="top">
-								<div align="center" class="analaysisDateCss">
-									<p:outputPanel>
-										<p:panel>
+							<td valign="top" width="80%">
+								<p:outputPanel id="chartPanel">
+									<p:panel rendered="#{empty analysisBean.analysisDayPojo}">
+										<p:graphicImage rendered="#{empty analysisBean.analysisDayPojo}" width="100%" value="#{request.contextPath}/../resources/images/renewimage.jpg"/>    
+										<br/>
+										<br/>
+										<p:panel styleClass="introAnalysis" rendered="#{empty analysisBean.analysisDayPojo}">
+											<div style="width:100%" align="center">
+												<div align="center" class="mainTextTitleDiv">
+													Start your 'Energy System Management'
+												</div>	
+												<br/>
+												<div class="mainTextContentDiv" style="width:70%" align="center">
+													Create your own Buildings with Divisions and merge them with your Analyzer
+													Information System. After The System is merged you can visualize the 
+													Energy costs over time.
+												</div>
+											</div>
 										</p:panel>
-									</p:outputPanel>
-								</div>
+									</p:panel>
+									<p:panel rendered="#{not empty analysisBean.analysisDayPojo}" styleClass="graphTitle">
+										 <f:facet name="header">
+										 	<div align="center">
+										 		<p:outputLabel value="Time"/>
+										 		<p:spacer width="10"/>
+												<p:calendar pattern="dd/MM/yyyy" id="calDate" value="#{analysisBean.currentDateAnalyzer}" mindate="#{analysisBean.minCurrentDateAnalyzer}" maxdate="#{analysisBean.maxCurrentDateAnalyzer}"/>
+												<p:spacer width="40" style="vertical-align:middle"/>
+												<p:outputLabel value="View"/>
+										 		<p:spacer width="10"/>
+												<p:selectOneMenu value="#{analysisBean.scaleGraphic}">
+													<f:selectItems value="#{analysisBean.scalesGraphic}"></f:selectItems>
+												</p:selectOneMenu>
+											</div>
+										</f:facet>
+										<div align="center">
+											<p:chart rendered="#{not empty analysisBean.analysisDayPojo}" type="line" responsive="true" model="#{analysisBean.analysisDayPojo.lineModel}" styleClass="analysisChart"/>
+										</div>
+									</p:panel>
+								</p:outputPanel>
 							</td>
-
 						</tr>
 					</table>
 			</h:form>
 			</div>
 			<ui:include src="./general/footer.xhtml" />
-			<ui:include src="./popups/newDivisionPopup.xhtml">
-				<ui:param name="parentDivision" value="parentName" />
-			</ui:include>
-			<ui:include src="./popups/newBuildingPopup.xhtml" />
+			<p:dialog widgetVar="newBuildingPopup" id="newBuildingPopup" style="z-index: 1002 !important"
+				modal="true" position="center center" draggable="false" dynamic="true"
+				closable="true" header="Add New Building" closeOnEscape="true"  resizable="false">
+				<h:form id="newBuildingForm">
+					<div>
+						<p:panelGrid columns="2" styleClass="newBuildingGrid">
+							<p:column>
+								<p:outputLabel for="newBuildingName" value="Name:"></p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:inputText id="newBuildingName" required="true" value="#{analysisBean.newBuilding.name}"></p:inputText>
+							</p:column>
+							<p:column>
+								<p:outputLabel for="newBuildingLocation" value="Location"></p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:inputText id="newBuildingLocation" value="#{analysisBean.newBuilding.location}" required="true"></p:inputText>
+							</p:column>
+						</p:panelGrid>
+						<br/>
+						<div align="center">
+							<p:commandButton action="#{analysisBean.createBuilding}" ajax="true" update="analysisForm" 
+										styleClass="loginFormButton" value="Create"
+										onstart="document.body.style.cursor='wait'"
+										oncomplete="document.body.style.cursor='default'; 
+													PF('newBuildingPopup').hide();
+													PF('successPanelnewBuildingPopup').show();"></p:commandButton>
+						</div>
+					</div>
+				</h:form>
+			</p:dialog>
+			<p:dialog widgetVar="newDivisionPopup" id="newDivisionPopup"
+				modal="true" position="center center" draggable="false"
+				closable="true" header="Add New Division" closeOnEscape="true" dynamic="true"
+				styleClass="logoClass" resizable="false">
+				<h:form id="newDivisionFormId">
+					<div class="newBuildingClass">
+						<p:panelGrid columns="2" styleClass="successGrid">
+							<p:column>
+								<p:outputLabel rendered="#{not empty analysisBean.parentDivisionSelected}" />
+							</p:column>
+							<p:column>
+								<p:outputLabel rendered="#{not empty analysisBean.parentDivisionSelected}" value="#{analysisBean.parentDivisionSelected.data.name}"/>
+							</p:column>
+							<p:column>
+								<p:outputLabel for="newDivisionName" value="Name:"></p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:inputText id="newDivisionName" required="true" value="#{analysisBean.newDivision.name}"></p:inputText>
+							</p:column>
+						</p:panelGrid>
+						<br/>
+						<div align="center">
+							<p:commandButton action="#{analysisBean.createDivision}" ajax="true" update="analysisForm" 
+										styleClass="signButton" value="Create"
+										oncomplete="PF('newDivisionPopup').hide();
+												    PF('successPanelnewDivisionPopup').show();"></p:commandButton>
+						</div>
+					</div>
+				</h:form>
+			</p:dialog>
+			<p:dialog widgetVar="newAnalyzerPopup" id="newAnalyzerPopup"
+			modal="true" position="center center" draggable="false" 
+			closable="true" header="Add New Analyzer" closeOnEscape="true"
+			styleClass="logoClass" resizable="false">
+				<h:form id="newAnalyzerFormId">
+					<div class="newBuildingClass">
+						<p:panelGrid columns="2" styleClass="successGrid">
+							<p:column>
+								<p:outputLabel for="newAnalyzerName" value="CodeName:"></p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:inputText id="newAnalyzerName" required="true"
+									value="#{analysisBean.newAnalyzer.codeName}"></p:inputText>
+							</p:column>
+							<p:column>
+								<p:outputLabel for="newAnalyzerName" value="Meters:"></p:outputLabel>
+							</p:column>
+							<p:column>
+								<p:selectManyMenu id="analyzersMeters" filter="false" styleClass="analyzersMeters"
+									value="#{analysisBean.newAnalyzer.analyzerMeters}"
+									var="analyzerMeterSel" showCheckbox="true">
+									<f:selectItems value="#{analysisBean.analyzerMeterValues}" var="analyzerMeter"
+										itemLabel="#{analyzerMeter.label}" itemValue="#{analyzerMeter}" />
+									<p:column>
+						                <h:outputText style="font-size: 12px" value="#{analyzerMeterSel.label}" />
+						            </p:column>
+								</p:selectManyMenu>
+							</p:column>
+						</p:panelGrid>
+						<br />
+						<div align="center">
+							<p:commandButton action="#{analysisBean.createAnalyzer(buildingId)}"
+								ajax="true" update="analysisForm"
+								styleClass="signButton" value="Create"
+								onstart="document.body.style.cursor='wait'"
+								oncomplete="document.body.style.cursor='default'; 
+													PF('newAnalyzerPopup').hide();
+													PF('successPanelnewAnalyzerPopup').show();"></p:commandButton>
+						</div>
+					</div>
+				</h:form>
+			</p:dialog>
+			<p:dialog widgetVar="successPanelnewBuildingPopup" id="successPanelnewBuildingPopup" modal="true" draggable="false" closable="false" header="Done"
+				closeOnEscape="true" resizable="false" dynamic="true">
+				<h:form>
+					<div class="successDialogDiv">
+						<p:panelGrid columns="2" styleClass="successGrid">
+							<p:column>
+								<p:graphicImage value="${pageContext.request.contextPath}/resources/images/success.png"></p:graphicImage>
+							</p:column>
+							<p:column>
+								<p:outputLabel value="The Building has been created successfully!"></p:outputLabel>
+							</p:column>
+						</p:panelGrid>
+						<br />
+						<div align="center">
+							<p:commandButton type="submit" 
+								styleClass="signButton" 
+								ajax="false" 
+								value="OK" 
+								oncomplete="#{redirectBean.redirectTo('analysis.xhtml?faces-redirect=true')}">
+							</p:commandButton>
+						</div>
+					</div>
+				</h:form>
+			</p:dialog>
+			<p:dialog widgetVar="successPanelnewDivisionPopup" id="successPanelnewDivisionPopup" modal="true" draggable="false" closable="false" header="Done"
+				closeOnEscape="true" resizable="false" dynamic="true">
+				<h:form>
+					<div class="successDialogDiv">
+						<p:panelGrid columns="2" styleClass="successGrid">
+							<p:column>
+								<p:graphicImage value="${pageContext.request.contextPath}/resources/images/success.png"></p:graphicImage>
+							</p:column>
+							<p:column>
+								<p:outputLabel value="The Division has been created successfully!"></p:outputLabel>
+							</p:column>
+						</p:panelGrid>
+						<br />
+						<div align="center">
+							<p:commandButton type="submit" 
+								styleClass="signButton" 
+								ajax="false" 
+								value="OK" 
+								oncomplete="#{redirectBean.redirectTo('analysis.xhtml?faces-redirect=true')}">
+							</p:commandButton>
+						</div>
+					</div>
+				</h:form>
+			</p:dialog>
+			<p:dialog widgetVar="successPanelnewAnalyzerPopup" id="successPanelnewAnalyzerPopup" modal="true" draggable="false" closable="false" header="Done"
+				closeOnEscape="true" resizable="false" dynamic="true">
+				<h:form>
+					<div class="successDialogDiv">
+						<p:panelGrid columns="2" styleClass="successGrid">
+							<p:column>
+								<p:graphicImage value="${pageContext.request.contextPath}/resources/images/success.png"></p:graphicImage>
+							</p:column>
+							<p:column>
+								<p:outputLabel value="The Analyzer has been created successfully!"></p:outputLabel>
+							</p:column>
+						</p:panelGrid>
+						<br />
+						<div align="center">
+							<p:commandButton type="submit" 
+								styleClass="signButton" 
+								ajax="false" 
+								value="OK" 
+								oncomplete="#{redirectBean.redirectTo('analysis.xhtml?faces-redirect=true')}">
+							</p:commandButton>
+						</div>
+					</div>
+				</h:form>
+			</p:dialog>
+			<p:dialog widgetVar="metersPanel" id="metersPanel" modal="true" draggable="false" closable="true" header="Meters List"
+				closeOnEscape="true" resizable="false" dynamic="true" width="400" height="100%">
+				<h:form id="metersForm">
+					<p:dataTable var="analyzerMeter" value="#{analysisBean.selectedAnalyzer.analyzerMeters}" rowKey="#{analyzerMeter}">
+						<p:column headerText="Label">
+							<p:outputLabel value="#{analyzerMeter.label}"/>
+						</p:column>
+						<p:column headerText="Unit">
+							<p:outputLabel value="#{analyzerMeter.unit}"/>
+						</p:column>
+					</p:dataTable>
+				</h:form>
+			</p:dialog>
 	</ui:define>
 </ui:composition>
