--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -14,7 +14,7 @@
 						<div
 							class="p-grid p-col-align-center p-justify-around vertical-container">
 							<h:form id="registerForm" class="registerForm">
-								<p:panel style="width:400px !important" styleClass="mainPanelReg">
+								<p:panel style="width:400px !important">
 									<div class="p-col">
 										<p:outputLabel>Name</p:outputLabel>
 										<p:inputText validatorMessage="Name too short!"
